<resources>
    <string name="app_name">RunUnited</string>
    <string name="common_ok">OK</string>
    <string name="common_login">Login</string>
    <string name="common_retry">Retry</string>
    <string name="common_cancel">Cancel</string>
    <string name="running_events">Running Events</string>
    <string name="hint_username">User name</string>
    <string name="hint_Password">Password</string>
    <string name="tab_menu_in_race">In Race</string>
    <string name="tab_menu_dnf">DNF</string>
    <string name="tab_menu_all">All</string>
    <string name="scan">Scan</string>
    <string name="manual">Manual</string>
    <string name="logout">Logout</string>
    <string name="reset">Reset</string>
    <string name="refresh_runner">Refresh runner</string>
    <string name="logout_title">Confirm Logout</string>
    <string name="logout_des">Are you sure you want to logout?</string>
    <string name="reset_title">Confirm Reset</string>
    <string name="reset_des">Are you sure you want to reset all upload statuses?</string>
    <string name="cancel">Cancel</string>
    <string name="reset_runner_title">Confirm Reset</string>
    <string name="reset_runner_des">Do you want to reset this Tracking?</string>
    <string name="button_add">+ Add</string>
    <string name="search">Search</string>
    <string name="upload_complete_title">Upload Complete</string>
    <string name="upload_empty_des">No data to upload</string>
    <string name="upload_has_data_des">Uploaded %s runners successfully!</string>
    <string name="runner_status_all">All: %1$d | In race: %2$d | DNF: %3$d</string>
    <string name="upload_fail_title">Upload Fail</string>
    <string name="upload_fail_des">Would you like to try again?</string>
    <string name="restart_app_title">Warning!!</string>
    <string name="restart_app_description">Please remove task and Restart application</string>
</resources>